Fix scrolling on mobile

--- a/src/sass/partials/_base.scss
+++ b/src/sass/partials/_base.scss
@@ -11,6 +11,7 @@
 html {
   box-sizing: border-box;
   overflow-x: hidden;
+  -webkit-overflow-scrolling: touch;
 }
 
 body {
@@ -19,6 +20,7 @@ body {
   font-weight: 300;
   overflow-x: hidden;
   overscroll-behavior: none;
+  -webkit-overflow-scrolling: touch;
 }
 
 App {
